# codemap_lite

./: .gitignore  CLAUDE.md  CONTEXT.md  config.yaml  pyproject.toml
codemap_lite/: cli.py
codemap_lite/agent/: claude_md_template.py  icsl_tools.py
codemap_lite/analysis/: feedback_store.py  prompt_builder.py  repair_orchestrator.py  source_point_client.py
codemap_lite/api/: __init__.py  app.py
codemap_lite/config/: default_config.yaml  settings.py
codemap_lite/graph/: __init__.py  incremental.py  neo4j_store.py  query_engine.py  (+1 more)
docs/: architecture.md  e2e-test-plan.md  implementation-plan.md  test-plan-frontend-workflow-gaps.md  test-plan-opencode-glm-castengine.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: _e2e_integration_report.json  run_e2e_full.py  run_e2e_integration.py  run_e2e_repair.py  test_analyze_status_contracts.py  test_api.py  test_api_castengine_contracts.py  test_api_endpoint_contracts.py  test_api_full_coverage.py  test_arch_bugs.py  test_arch_bugs_r4.py  test_architecture_compliance.py  test_architecture_contracts.py  test_architecture_deep_contracts.py  test_architecture_neo4j_integration.py  test_castengine_integration.py  test_castengine_pipeline_contracts.py  test_cli.py  test_cli_contracts.py  test_config.py  test_cpp_plugin.py  test_e2e_castengine.py  test_e2e_mvp.py  test_feedback_config_pipeline_contracts.py  test_feedback_pipeline_bugs.py  test_feedback_store.py  test_file_scanner.py  test_graph_store.py  test_graph_store_bfs_contracts.py  test_graph_store_edge_cases.py  test_hooks.py  test_icsl_pipeline_deep.py  test_icsl_tools.py  test_icsl_tools_contracts.py  test_incremental.py  test_incremental_api_deep.py  test_incremental_review_analyze_contracts.py  test_library_whitelist.py  test_neo4j_contracts.py  test_pipeline.py  (+12 more)
(+55 files in other folders)
